# dconf-defaults

./: CMakeLists.txt
src/: main.cpp
ts/: dconf-defaults_ru_RU.ts
